# click_completion

./: README  pyproject.toml
src/click_completion/: __init__.py  __main__.py  completion.py
src/click_completion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
